Salesforce/force-app/main/default/objects/PPI_Work_Class_One_and_Two__mdt/PPI_Work_Class_One_and_Two__mdt.object-meta.xml
<CustomObject>
    <label>PPI Work Class One and Two</label>
    <pluralLabel>PPI Work Class One and Twos</pluralLabel>
</CustomObject>