Salesforce/force-app/main/default/objects/PPI_Work_Class_One_and_Two__mdt/fields/Class_One__c.field-meta.xml
<CustomField>
    <fullName>Class_One__c</fullName>
    <label>PPI Work Class One</label>
    <referenceTo>PPI_Work_Class_One__mdt</referenceTo>
    <relationshipLabel>PPI Work Class One and Twos</relationshipLabel>
    <relationshipName>PPI_Work_Class_One_and_Twos</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>