Salesforce/force-app/main/default/objects/PPI_Work_Class_One_and_Two__mdt/fields/OrderC2__c.field-meta.xml
<CustomField>
    <fullName>OrderC2__c</fullName>
    <label>OrderC2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>